axum-debug/tests/fail/extract_self_ref.stderr
error: Handlers must only take owned values
  --> tests/fail/extract_self_ref.rs:20:22
   |
20 |     async fn handler(&self) {}
   |                      ^^^^^
